# DataScienceVSCode

./: .gitattributes  .gitignore  Dockerfile  GUIA_CONFIGURACION.md  INDICE_NOTEBOOKS.md  README.md  RECURSOS_ML_ESTADISTICA.md  Start-MLflow-Share-backup.ps1  Start-MLflow-Share-clean.ps1  Start-MLflow-Share.ps1  docker-compose.yml  docker-helper.ps1  ds_tools.ps1  inspect_mlflow_pkls.py  mlflow.db  mlflow_static_report.py  pyproject.toml  quick-start-backup.ps1  quick-start.ps1  quick-start.sh  quick-stop-backup.ps1  quick-stop.ps1  quick-stop.sh  requirements.txt  setup_ds_mamba.ps1  setup_ds_mamba.sh  start_jupyterlab_mamba.ps1  test-docker.ps1
.Trash-0/info/: Untitled Folder 1.trashinfo  Untitled Folder.trashinfo  notebooks_final_final.trashinfo
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: Credipesos_ArmarTablaPerformance-checkpoint.ipynb  report-checkpoint.html
.jupyter/: jupyter_lab_config.py  jupyter_lab_config_custom.py  migrated
mlruns/: environment.yml
mlruns/681593623995807636/: meta.yaml
notebooks/: ejemplo_intro.ipynb  test_linter.ipynb
notebooks/ISLP_labs/: Ch02-statlearn-lab.ipynb  Ch04-classification-lab.ipynb  Ch05-resample-lab.ipynb
notebooks/Machine-Learning-with-Pytorch-Scikit-Learn/: Ch_02_Perceptron_GradientDescent_Adaline.ipynb  Ch_03_LogisticReg_SVM_DecisionTree_KNN.ipynb  Ch_04_DataPreprocessing_L1_L2_FeatureSelection.ipynb  Ch_05_DimensionalityReduction_PCA_LDA_tSNE.ipynb  Ch_06_ModelEvaluation_HyperparameterTuning.ipynb  Ch_07_EnsembleLearning_.ipynb  Ch_08_SentimentAnalysis_TopicModelling_LDA.ipynb  README.md  (+1 more)
(+728 files in other folders)
