[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds_utils"
version = "0.1.0"
description = "Utilidades para experimentos de ciencia de datos (carga de datos, gráficos, MLflow helpers, etc.)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "cmssoftware" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "jupytext",
  "pre-commit",
  "nbstripout"
]
